Fix search in places panel.

addType("File") will create a invalid query for baloo. Currently seems
there is no replacement for it, so just remove it.

REVIEW: 126109
FIXED-IN: 15.12
BUG: 348902